# gardening

./: .gitignore  CMakeLists.txt
res/shaders/: basic.frag  basic.vert
src/: main.c
src/engine/: color.c  shader.c  window.c
src/engine/buffer/: buffer.c  layout.c  mesh.c
src/engine/buffer/include/: buffer.h  layout.h  mesh.h
src/engine/include/: color.h  renderer.h  shader.h  window.h
src/engine/rendering/: renderer.c
src/engine/rendering/include/: renderer.h
src/utils/: error.c  result.c
src/utils/include/: error.h  result.h
